[gd_scene load_steps=2 format=3 uid="uid://t0fsk7ewtt5n"]

[ext_resource type="Script" path="res://src/ui/menu/menu_ui.gd" id="1_ahgra"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -4.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahgra")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="New" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New"

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Open"

[node name="FileDialog" type="FileDialog" parent="MarginContainer/VBoxContainer/Open"]
initial_position = 1
size = Vector2i(452, 500)

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
